cmake_minimum_required(VERSION 3.16)
project(Projects)
set(CMAKE_CXX_STANDARD 14)

add_executable(Projects hello_world.cpp)
add_executable(gr2180_hw2_q1 hw2/gr2180_hw2_q1.cpp)
add_executable(gr2180_hw2_q2 hw2/gr2180_hw2_q2.cpp)
add_executable(gr2180_hw2_q3 hw2/gr2180_hw2_q3.cpp)
add_executable(gr2180_hw2_q4 hw2/gr2180_hw2_q4.cpp)
add_executable(gr2180_hw3_q6 hw3/gr2180_hw3_q6.cpp)
add_executable(gr2180_hw3_q1 hw3/gr2180_hw3_q1.cpp)
add_executable(gr2180_hw3_q2 hw3/gr2180_hw3_q2.cpp)
add_executable(gr2180_hw3_q3 hw3/gr2180_hw3_q3.cpp)
add_executable(gr2180_hw3_q4 hw3/gr2180_hw3_q4.cpp)
add_executable(gr2180_hw3_q5 hw3/gr2180_hw3_q5.cpp)
add_executable(gr2180_hw4_q8 hw4/gr2180_hw4_q8.cpp)
add_executable(gr2180_hw4_q7 hw4/gr2180_hw4_q7.cpp)
add_executable(gr2180_hw4_q6 hw4/gr2180_hw4_q6.cpp)
add_executable(gr2180_hw4_q5 hw4/gr2180_hw4_q5.cpp)
add_executable(gr2180_hw4_q4 hw4/gr2180_hw4_q4.cpp)
add_executable(gr2180_hw4_q3 hw4/gr2180_hw4_q3.cpp)
add_executable(gr2180_hw4_q2 hw4/gr2180_hw4_q2.cpp)
add_executable(gr2180_hw4_q1 hw4/gr2180_hw4_q1.cpp)
add_executable(gr2180_hw5_q2 hw5/gr2180_hw5_q2.cpp)
add_executable(gr2180_hw5_q1 hw5/gr2180_hw5_q1.cpp)
add_executable(gr2180_hw5_q3 hw5/gr2180_hw5_q3.cpp)
add_executable(gr2180_hw5_q4 hw5/gr2180_hw5_q4.cpp)
add_executable(gr2180_hw5_q5 hw5/gr2180_hw5_q5.cpp)
add_executable(gr2180_hw5_q6 hw5/gr2180_hw5_q6.cpp)
add_executable(shapes lecture/shapes.cpp)
add_executable(practice_shapes lecture/practice_shapes.cpp)
add_executable(gr2180_hw6_q1 hw6/gr2180_hw6_q1.cpp)
add_executable(gr2180_hw6_q2 hw6/gr2180_hw6_q2.cpp)
add_executable(gr2180_hw6_q3 hw6/gr2180_hw6_q3.cpp)
add_executable(gr2180_hw6_q4 hw6/gr2180_hw6_q4.cpp)
add_executable(gr2180_hw6_q5 hw6/gr2180_hw6_q5.cpp)
add_executable(gr2180_hw6_q6 hw6/gr2180_hw6_q6.cpp)
add_executable(gr2180_hw7_q1 hw7/gr2180_hw7_q1.cpp)
add_executable(gr2180_hw7_q2 hw7/gr2180_hw7_q2.cpp)
add_executable(gr2180_hw7_q3 hw7/gr2180_hw7_q3.cpp)
add_executable(gr2180_hw7_q4 hw7/gr2180_hw7_q4.cpp)
add_executable(gr2180_hw7_q5 hw7/gr2180_hw7_q5.cpp)
add_executable(gr2180_hw7_q6 hw7/gr2180_hw7_q6.cpp)
add_executable(gr2180_hw7_q7 hw7/gr2180_hw7_q7.cpp)
add_executable(recursion_mod lecture/recursion_mod.cpp)
add_executable(gr2180_hw8_q1 hw8/gr2180_hw8_q1.cpp)
add_executable(gr2180_hw8_q2 hw8/gr2180_hw8_q2.cpp)
add_executable(gr2180_hw8_q3 hw8/gr2180_hw8_q3.cpp)
add_executable(gr2180_hw8_q4 hw8/gr2180_hw8_q4.cpp)
add_executable(gr2180_hw9 hw9/gr2180_hw9.cpp)
add_executable(hello_world hello_world.cpp)
add_executable(doodlebug_check hw9/doodlebug_check.cpp)
add_executable(doodlebug_move_approach hw9/doodlebug_move_approach.cpp)
add_executable(gr2180_hw10 hw10/gr2180_hw10.cpp)
add_executable(gr2180_hw11 hw11/gr2180_hw11.cpp)
add_executable(hw11_check hw11/hw11_check.cpp)